# epistemix

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Epistemix_v1_Sintesi.docx  PLAN.md  Parte_01.txt  README.md  TODO.md  citation_graph.py  connector.py  content_analysis.py  core.py  disciplines.py  docker-compose.yml  multi_agent.py  pyproject.toml  run.py  test_amphipolis.py  test_integrated.py
.github/: copilot-instructions.md
.github/instructions/: python-core.instructions.md  tests.instructions.md  web.instructions.md
.github/workflows/: ci.yml  claude-review.yml  deploy-web.yml  deploy-worker.yml
docs/: 00_INDICE.txt  API.md  CONTRIBUTING.md  DEPLOYMENT.md  Epistemix_Onboarding_Tecnico.docx  PLAN.md  Parte_02.txt  Parte_03.txt  Parte_04_Sessione3_post_compattazione.txt
docs/plans/: 2026-02-21-access-barriers-design.md  2026-02-21-access-barriers-impl.md  2026-02-21-scite-ai-analysis.md
src/epistemix/: __init__.py  citation_graph.py  connector.py  content_analysis.py  core.py  disciplines.py  knowledge.py  meta_axioms.py  models.py  multi_agent.py  (+3 more)
supabase/: config.toml
tests/: conftest.py  test_access_barriers.py  test_amphipolis.py  test_citation_graph.py  test_connector.py  test_content_analysis.py  test_core.py  test_disciplines.py  test_integrated.py  test_jfk.py  test_knowledge.py  test_models.py  test_multi_agent.py  test_query_localization.py  test_semantic_graph.py
web/: .env.local.example  next.config.ts  package-lock.json  package.json
worker/: Dockerfile  fly.toml  main.py  requirements.txt  supabase_writer.py
(+27 files in other folders)
